# prosper_opengl

./: CMakeLists.txt  README.md
include/: gl_command_buffer.hpp  gl_context.hpp  gl_descriptor_set_group.hpp  gl_event.hpp  gl_fence.hpp  gl_framebuffer.hpp  gl_render_pass.hpp  gl_util.hpp  gl_window.hpp  prosper_opengl_definitions.hpp
include/buffers/: gl_buffer.hpp  gl_dynamic_resizable_buffer.hpp  gl_render_buffer.hpp  gl_uniform_resizable_buffer.hpp
include/image/: gl_image.hpp  gl_image_view.hpp  gl_sampler.hpp
include/shader/: gl_shader_blit.hpp  gl_shader_clear.hpp  gl_shader_flip_y.hpp
src/: gl_api.hpp  gl_command_buffer.cpp  gl_context.cpp  gl_descriptor_set_group.cpp  gl_event.cpp  gl_fence.cpp  gl_framebuffer.cpp  gl_render_pass.cpp  gl_util.cpp  gl_window.cpp  prosper_opengl.cpp  stdafx_prosper_opengl.h
src/buffers/: gl_buffer.cpp  gl_dynamic_resizable_buffer.cpp  gl_render_buffer.cpp  gl_uniform_resizable_buffer.cpp
src/image/: gl_image.cpp  gl_image_view.cpp  gl_sampler.cpp
src/implementation/: command_buffer.cpp  context.cpp  descriptor_set_group.cpp  event.cpp  fence.cpp  framebuffer.cpp  opengl_api.hpp  render_pass.cpp  util.cpp  window.cpp
src/implementation/buffers/: buffer.cpp  (+4 more)
src/interface/: command_buffer.cppm  context.cppm  descriptor_set_group.cppm  event.cppm  fence.cppm  framebuffer.cppm  prosper_opengl.cppm  render_pass.cppm  util.cppm  window.cppm
src/shader/: gl_shader_blit.cpp  gl_shader_clear.cpp  gl_shader_flip_y.cpp  gl_shader_post_processing.cpp  gl_shader_post_processing.hpp
third_party_libs/glad/: CMakeLists.txt
(+20 files in other folders)
